tdf#116509 OpenGL: Slideshows with Transitions crashing Impress

regression from
    commit  e5012e53b919ae4921d6d35660bde323a6f28417
    use scanline when reading pixel data

Change-Id: I1980a1acfedadbea706b93aed7452790e03257f2